[gd_scene load_steps=49 format=3 uid="uid://gdo7fmio88fn"]

[ext_resource type="Script" path="res://player/player.gd" id="1_teghp"]
[ext_resource type="Texture2D" uid="uid://dwuk1wotf6y50" path="res://sprites/shadow.png" id="2_hvbpw"]
[ext_resource type="Texture2D" uid="uid://bgymw4l2oymtc" path="res://sprites/player/player-dead.png" id="3_2bqqa"]
[ext_resource type="Texture2D" uid="uid://si1biqu2tpxp" path="res://sprites/player/player-hurt.png" id="3_b0r7w"]
[ext_resource type="Texture2D" uid="uid://mbgktmkokcql" path="res://sprites/player/player-idle.png" id="3_hsq4i"]
[ext_resource type="Texture2D" uid="uid://bjwiq2q541nft" path="res://sprites/player/player-walk.png" id="4_4gd1v"]
[ext_resource type="PackedScene" uid="uid://cl0vk4malih5v" path="res://ui/in-game/health_bar.tscn" id="5_yybqa"]
[ext_resource type="AudioStream" uid="uid://cykhxqq27ld8o" path="res://sounds/lazercannon.mp3" id="6_yhd2o"]
[ext_resource type="Texture2D" uid="uid://bnx4gwxp4icjk" path="res://sprites/player/level-up.png" id="7_l7eyr"]
[ext_resource type="AudioStream" uid="uid://c50m1xtfc84gp" path="res://sounds/beep.mp3" id="7_ngsqq"]
[ext_resource type="Texture2D" uid="uid://dymt52ugwiobd" path="res://sprites/player/player-effects-heal.png" id="7_qp5db"]
[ext_resource type="AudioStream" uid="uid://qen7gpw0psw8" path="res://sounds/ouch.wav" id="10_2qr18"]
[ext_resource type="AudioStream" uid="uid://6l78umox8pi5" path="res://sounds/lvlup.wav" id="12_c1clg"]
[ext_resource type="AudioStream" uid="uid://cxru2f02empok" path="res://sounds/drink.mp3" id="13_x6obx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uir31"]
atlas = ExtResource("3_2bqqa")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvg3p"]
atlas = ExtResource("3_b0r7w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0oc7"]
atlas = ExtResource("3_b0r7w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie2s4"]
atlas = ExtResource("3_hsq4i")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2robk"]
atlas = ExtResource("3_hsq4i")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcfow"]
atlas = ExtResource("4_4gd1v")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnhld"]
atlas = ExtResource("4_4gd1v")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pli0g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uir31")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvg3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0oc7")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie2s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2robk")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcfow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnhld")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ukgm5"]
atlas = ExtResource("7_qp5db")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3bkj"]
atlas = ExtResource("7_qp5db")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kc4g"]
atlas = ExtResource("7_qp5db")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juvrg"]
atlas = ExtResource("7_qp5db")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85mn5"]
atlas = ExtResource("7_qp5db")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c34h"]
atlas = ExtResource("7_qp5db")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7dv2"]
atlas = ExtResource("7_qp5db")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_og100"]
atlas = ExtResource("7_qp5db")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bu2e"]
atlas = ExtResource("7_qp5db")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_misy4"]
atlas = ExtResource("7_l7eyr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iywv0"]
atlas = ExtResource("7_l7eyr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkwhv"]
atlas = ExtResource("7_l7eyr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjd3f"]
atlas = ExtResource("7_l7eyr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04lj8"]
atlas = ExtResource("7_l7eyr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbm2r"]
atlas = ExtResource("7_l7eyr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5en2"]
atlas = ExtResource("7_l7eyr")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rj14w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukgm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3bkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kc4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juvrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85mn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c34h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7dv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og100")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bu2e")
}],
"loop": false,
"name": &"heal",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_misy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iywv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkwhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjd3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04lj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbm2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5en2")
}],
"loop": false,
"name": &"lvlup",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5pv4u"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l4us1"]
radius = 10.6888

[sub_resource type="CircleShape2D" id="CircleShape2D_12tvn"]
radius = 62.002

[sub_resource type="CircleShape2D" id="CircleShape2D_4lpg2"]
radius = 35.5035

[sub_resource type="Gradient" id="Gradient_0bcxw"]
offsets = PackedFloat32Array(0, 0.350649, 0.551948, 0.727273, 0.811688, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0.987007, 0.981352, 0.976486, 1, 0.80796, 0.73072, 0.663398, 1, 0.437645, 0.395807, 0.359341, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pmtm4"]
gradient = SubResource("Gradient_0bcxw")
width = 100
height = 100
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.75, 0.75)

[sub_resource type="Animation" id="Animation_t1scx"]
resource_name = "burst"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.148651),
"update": 0,
"values": [1.0, 50.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.0490367),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_4iifq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dq4s"]
_data = {
"RESET": SubResource("Animation_4iifq"),
"burst": SubResource("Animation_t1scx")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 71
script = ExtResource("1_teghp")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -669.0
offset_top = -425.0
offset_right = 754.0
offset_bottom = 416.0
color = Color(0.435192, 0.435192, 0.435192, 1)

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(0, 5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_hvbpw")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_pli0g")
animation = &"idle"
autoplay = "idle"

[node name="Effects" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -7.5)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_rj14w")
animation = &"heal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_5pv4u")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="Health" parent="." instance=ExtResource("5_yybqa")]
unique_name_in_owner = true
position = Vector2(0, -25)
visible_bar = false

[node name="Triggers" type="CanvasGroup" parent="."]

[node name="HurtBox" type="Area2D" parent="Triggers"]
unique_name_in_owner = true
visible = false
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="Triggers/HurtBox"]
shape = SubResource("CircleShape2D_l4us1")
debug_color = Color(0.998759, 0, 0.1334, 0.42)

[node name="XpCollectRadius" type="Area2D" parent="Triggers"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 0, 1)
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 32

[node name="XpCollectShape" type="CollisionShape2D" parent="Triggers/XpCollectRadius"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_12tvn")

[node name="CollectRadius" type="Area2D" parent="Triggers"]
unique_name_in_owner = true
visible = false
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/CollectRadius"]
shape = SubResource("CircleShape2D_4lpg2")
debug_color = Color(0.190698, 0.631057, 0.345587, 0.42)

[node name="Timers" type="Node" parent="."]

[node name="PickUpTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="DamageTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="DashGhostTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="Sounds" type="Node" parent="."]

[node name="DashSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("6_yhd2o")
volume_db = -15.928
pitch_scale = 2.0
bus = &"Effects"

[node name="DashReadySound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("7_ngsqq")
volume_db = -24.36
pitch_scale = 2.8
bus = &"Effects"

[node name="HitSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("10_2qr18")
volume_db = -7.222
pitch_scale = 1.68
bus = &"Effects"

[node name="LvlUpSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("12_c1clg")
volume_db = -16.396
bus = &"Effects"

[node name="HealSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("13_x6obx")
volume_db = 3.0
pitch_scale = 1.5

[node name="EffectLight" type="PointLight2D" parent="."]
energy = 0.0
texture = SubResource("GradientTexture2D_pmtm4")

[node name="EffectAnimation" type="AnimationPlayer" parent="EffectLight"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6dq4s")
}

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="animation_finished" from="Effects" to="." method="_on_effects_animation_finished"]
[connection signal="timeout" from="Timers/PickUpTimer" to="." method="_on_pick_up_timer_timeout"]
[connection signal="timeout" from="Timers/DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Timers/DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Timers/DashGhostTimer" to="." method="_on_dash_ghost_timer_timeout"]
